fix flex-wrap

--- a/css/custom.css
+++ b/css/custom.css
@@ -232,5 +232,7 @@ figure h4 {
   display: -o-flex;
   display: flex;
   flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
   flex: 1 1 auto;
 }
